solved weird overflow and padding issues, scroller appears to be working well. Sticky header continues to elude me....

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   background-image: linear-gradient(
@@ -28,7 +32,7 @@ body {
 }
 
 .main-container {
-  width: min(75rem, 100vw) !important;
+  width: min(75rem, 100%);
 }
 
 html.lenis {
